[tool.poetry]
name = "hexlet-code"
version = "1.2.1"
description = "Brain-games is a collection of simple games for terminal. Play and train your brain."
classifiers = [
	"Topic :: Games/Entertainment",
	"Topic :: Games/Entertainment :: Puzzle Games"
]
authors = ["Denis Bolshakov <dreu007@gmail.com>"]
repository = "https://github.com/DREU007/python-project-49"
readme = "README.md"
packages = [
	{ include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

